backend/src/lang/parse/preprocess/snapshots/cam_core_internal__lang__parse__preprocess__tests__define-2.snap
---
source: backend/src/lang/parse/preprocess/tests.rs
expression: "parse(r#\"#define A \"B C\"\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        None,
                        Macro(
                            [
                                Single(
                                    (
                                        Ident(
                                            "B",
                                        ),
                                        11..12,
                                    ),
                                ),
                                Single(
                                    (
                                        Ident(
                                            "C",
                                        ),
                                        13..14,
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                0..16,
            ),
        ],
    ),
)
