backend/src/lang/parse/preprocess/snapshots/cam_core_internal__lang__parse__preprocess__tests__define-5.snap
---
source: backend/src/lang/parse/preprocess/tests.rs
expression: "parse(r#\"#define A(B,C)C\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        Some(
                            {
                                "B",
                                "C",
                            },
                        ),
                        Macro(
                            [
                                Single(
                                    (
                                        Ident(
                                            "C",
                                        ),
                                        14..15,
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                0..16,
            ),
        ],
    ),
)
