backend/src/lang/parse/preprocess/snapshots/cam_core_internal__lang__parse__preprocess__tests__dont_lex_line_comment.snap
---
source: backend/src/lang/parse/preprocess/tests.rs
expression: "parse(r#\"/ / // this is not part of the line\"#)"
---
Ok(
    Tree(
        [
            (
                Line(
                    [
                        Single(
                            (
                                Slash,
                                0..1,
                            ),
                        ),
                        Single(
                            (
                                Slash,
                                2..3,
                            ),
                        ),
                    ],
                ),
                0..36,
            ),
        ],
    ),
)
