backend/src/lang/parse/preprocess/snapshots/cam_core_internal__lang__parse__preprocess__tests__include.snap
---
source: backend/src/lang/parse/preprocess/tests.rs
expression: "parse(r#\"#include A/B/C // a b c\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Include(
                        "A/B/C",
                    ),
                ),
                0..24,
            ),
        ],
    ),
)
